# alpha-parser

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: create-main-branch.yml  tests.yml
data/: .env.example  fetch_fmp.py
examples/: cookbook.py  risk_model_example.py
src/: parser.py
src/alpha_parser/: __init__.py  conditional.py  context.py  crosssection.py  data.py  groups.py  operators.py  parser.py  primitives.py  risk.py  signal.py  timeseries.py
src/alpha_parser/evaluation/: __init__.py  backtest.py  metrics.py  quantile.py
src/evaluation/: backtest.py  quantile.py
tests/: conftest.py  test_evaluation.py  test_events.py  test_examples.py  test_integration.py  test_lazy.py  test_operators.py
